# MathAgent

./: .gitignore  LICENSE  README.md
agno/: README.md  main.py  math_agent.py  prompts.py  utils.py
autogen/: README.md  main.py  prompts.py
camel/: README.md  main.py  math_agent.py  prompts.py  utils.py
crewai/math_solver/: README.md  pyproject.toml
crewai/math_solver/src/math_solver/: main.py  utils.py
crewai/math_solver/src/math_solver/crews/math_crew/: math_crew.py
crewai/math_solver/src/math_solver/crews/math_crew/config/: agents.yaml  tasks.yaml
crewai/math_solver/src/math_solver/tools/: custom_tool.py
langchain/: README.md  main.py  math_agent.py  prompts.py  utils.py
langgraph/: README.md  main.py  math_agent.py  nodes.py  utils.py
pocket_flow/: README.md  flow.py  main.py  nodes.py  utils.py
