[project]
name = "math_solver"
version = "0.1.0"
description = "math_solver using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
]

[project.scripts]
kickoff = "math_solver.main:kickoff"
run_crew = "math_solver.main:kickoff"
plot = "math_solver.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
